custom button created - button usage has changed

--- a/src/_assets/main.scss
+++ b/src/_assets/main.scss
@@ -59,3 +59,9 @@ aside {
   top: 0;
   margin: 10px 15px 0 0 !important;
 }
+
+.select-empty-value {
+  position: absolute;
+  right: 35px;
+  top: 3px;
+}
